--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.0.13",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
